--- a/src/app/components/home/home.html
+++ b/src/app/components/home/home.html
@@ -1,12 +1,13 @@
+<body>
 <div class="home-container">
   <div class="home-header">
     <div class="logo-section">
-      <div class="logo">ابوركان</div>
+      <div class="logo">حسن خلف </div>
     </div>
     <div class="title-section">
-      <h1>نظام المخزان</h1>
-      <p>الشركة العربية للنقل والتخزين والصرف</p>
-      <p>ابوركان - فرع القصير</p>
+      <h1>نظام المخازن</h1>
+      <!-- <p>الشركة العربية للنقل والتخزين والصرف</p> -->
+      <p> حسن خلف</p>
     </div>
   </div>
 
@@ -29,3 +30,5 @@
     </div>
   </div>
 </div>
+</body>
+
