--- a/src/app/components/inbound/inbound.component.html
+++ b/src/app/components/inbound/inbound.component.html
@@ -23,7 +23,7 @@
         </svg>
         <span>{{ error }}</span>
       </div>
-        <table>
+        <table class="inbound-table">
           <tr>
             <td width="25%">عنبر</td>
             <td width="25%"></td>
