--- a/src/app/components/home/home.html
+++ b/src/app/components/home/home.html
@@ -9,6 +9,11 @@
       <!-- <p>الشركة العربية للنقل والتخزين والصرف</p> -->
       <p> حسن خلف</p>
     </div>
+    <div class="products-button-container">
+      <button class="btn btn-primary btn-lg" routerLink="/products">
+        Products
+      </button>
+    </div>
   </div>
 
   <div class="menu-container">
